--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "enigma.js": "^2.2.0",
     "qrs-interact": "^3.0.0",
     "ws": "^4.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/eapowertools/qs-meta-fetcher.git"
   }
 }
