--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bluebird": "^3.5.1",
-    "enigma.js": "^2.2.0",
+    "bluebird": "^3.5.3",
+    "enigma.js": "^2.4.0",
+    "extend": "^3.0.2",
     "qrs-interact": "^3.0.0",
     "ws": "^4.0.0"
   },
